Closed Bug 1285478 Opened 8 years ago Closed 8 years ago

[Coverity 1363348] Null pointer dereferences in cmd/pp/pp.c

Categories

(NSS :: Libraries, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: ttaubert, Assigned: ttaubert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

*** CID 1363348:  Null pointer dereferences  (REVERSE_INULL)
/cmd/pp/pp.c: 180 in main()
174             fprintf(stderr, "%s: don't know how to print out '%s' files\n",
175                     progName, typeTag);
176             SECU_PrintAny(outFile, &data, "File contains", 0);
177             return -1;
178         }
179     
>>>     CID 1363348:  Null pointer dereferences  (REVERSE_INULL)
>>>     Null-checking "typeTag" suggests that it may be null, but it has already been dereferenced on all paths leading to the check.
180         if (typeTag) {
181             PORT_Free(typeTag);
182         }
183     
184         if (inFile != PR_STDIN)
185             PR_Close(inFile);
Comment on attachment 8769067 [details] [diff] [review]
0001-Bug-1285478-Coverity-1363348-Null-pointer-dereferenc.patch

Review of attachment 8769067 [details] [diff] [review]:
-----------------------------------------------------------------

couldn't get myself to fix this, thanks ;)
Attachment #8769067 - Flags: review?(franziskuskiefer) → review+
https://hg.mozilla.org/projects/nss/rev/1f8528ccbba4
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: