Bug 1285478 - [Coverity 1363348] Null pointer dereferences in cmd/pp/pp.c r=franziskus