cmd/pp/pp.c
@@ -177,9 +177,7 @@ main(int argc, char **argv)
         return -1;
     }
 
-    if (typeTag) {
-        PORT_Free(typeTag);
-    }
+    PORT_Free(typeTag);
 
     if (inFile != PR_STDIN)
         PR_Close(inFile);
